# oopsie-logsy

./: .gitignore  .prettierrc  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json
project/proto/: .gitignore  Cargo.toml  README.md
project/proto/src/: main.rs
project/proto/src/common/: benchmark.rs  mod.rs  timer.rs
project/proto/src/json_io/: custom.rs  json_rust.rs  mod.rs  serde_json.rs
project/proto/src/model/: log_entry.rs  mod.rs
project/proto/tools/: build_generate_entries.sh  generate_entries.cpp
src/: App.css  App.tsx  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/commands/: apply_filters.rs  apply_regex_tags.rs  current_log_paths.rs  filter_tabs.rs  get_filter_tabs.rs  get_filters.rs  get_logs_chunk.rs  get_regex_tags.rs  import_logs.rs  log_regex_tags.rs  mod.rs  set_current_log_paths.rs  set_filter_tabs.rs  set_regex_tags.rs
src-tauri/src/common/: command_status.rs  config_file.rs  disk_io.rs  json.rs  mod.rs  scope_log.rs  timer.rs
src-tauri/src/controller/: convert_logs.rs  filter_logs.rs  mod.rs  read_logs_chunk.rs
src-tauri/src/core/: data.rs  mod.rs
src-tauri/src/logic/: logs_converter.rs  logs_reader_test.rs
src-tauri/src/logics/: logs_converter.rs  logs_reader_test.rs  mod.rs  read_converted_logs.rs
src-tauri/src/state/: mod.rs
src-tauri/src/store/: current_log_paths.rs  filter_tabs.rs  filters.rs  log_regex_tags.rs  logs.rs  mod.rs  oopsie_logsy_store.rs  regex_tags.rs  store.rs  watcher.rs
(+253 files in other folders)
