[package]
name = "oopsie-logsy-json-benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
pikkr-annika = "0.16.1"
rand = "0.8"
colored = "2.0"
bincode = "1.3"
bson = "2.14.0"
regex = "1"
memmap2 = "0.7"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
